src/test/resources/de/monticore/umlcd4a/cocos/ebnf/valid/A.cd
package de.monticore.umlcd4a.cocos.ebnf.valid;

classdiagram A {
  class C {
    String a;
    String b;
  }
}
