src/test/resources/de/monticore/umlcd4a/cocos/ebnf/invalid/CD4AC0014.cd
package de.monticore.umlcd4a.cocos.ebnf.invalid;

classdiagram CD4AC0014 {
  class C {
    AnUndefinedType attr;
  }
}